--- a/styly.css
+++ b/styly.css
@@ -1,30 +1,49 @@
 @font-face {
-    font-family: normal;
-    src: url(RobotoMono-VariableFont_wght.ttf);
+  font-family: normal;
+  src: url(RobotoMono-VariableFont_wght.ttf);
 }
-.button1
-{
-   border-radius: 10px;
-   background-color: transparent;
-   border: 0;
-   font-family: normal;
+#first {
+  height: 125px;
+  width: 350px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 50px;
 }
-.container
-{
-    display: flex;
-    gap: 20px;
-    flex-direction: row;
-    padding-top: auto;
-    padding-bottom: auto;
-    position: absolute;
-    left: 1000px;
+#first div {
+  display: flex;
+  flex-direction: row;
 }
-body
-{
-    font-family: normal;
+#first #l {
+  color: #0066FE;
+}
+#first h1 {
+  color: white;
+}
 
+#second {
+  height: 125px;
+  width: 350px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 50px;
+  font-family: normal;
 }
-header
-{
-    background-color: black;
+
+header {
+  height: 120px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  background-color: #1E1E1E;
+  opacity: 0.93;
 }
+
+.main {
+  background-color: black;
+}
+
+/*# sourceMappingURL=styly.css.map */
