--- a/styly.css
+++ b/styly.css
@@ -39,7 +39,6 @@ header {
   justify-content: space-between;
   flex-direction: row;
   background-color: #1E1E1E;
-  opacity: 0.93;
   position: fixed;
 }
 
@@ -187,4 +186,107 @@ footer .footerlogo .logonapis #l {
 footer .footerlogo .text {
   opacity: 0.3;
   padding-top: 15px;
+}
+
+.Onas {
+  height: 450px;
+  width: 1150px;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  color: white;
+  gap: 50px;
+  margin-top: 20vh;
+}
+.Onas p {
+  font-size: 30px;
+}
+.Onas .nadpis {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+.Onas .nadpis h1 {
+  font-size: 70px;
+}
+.Onas .nadpis #char {
+  color: #0066FE;
+}
+.Onas .text-onas {
+  margin-left: 40px;
+  height: 365px;
+  width: 1000px;
+}
+
+.main-onas {
+  background-color: rgb(10, 12, 11);
+  display: grid;
+  height: 100vh;
+}
+
+.formular {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 80px);
+  gap: 30px;
+}
+.formular input::-moz-placeholder {
+  color: white;
+  opacity: 1;
+  text-align: center;
+  font-size: 32px;
+}
+.formular input::placeholder {
+  color: white;
+  opacity: 1;
+  text-align: center;
+  font-size: 32px;
+}
+.formular textarea::-moz-placeholder {
+  color: white;
+  opacity: 1;
+  font-size: 32px;
+  padding-left: 15px;
+}
+.formular textarea::placeholder {
+  color: white;
+  opacity: 1;
+  font-size: 32px;
+  padding-left: 15px;
+}
+.formular input {
+  height: 100%;
+  width: 100%;
+  border-radius: 15px;
+  background-color: #1E1E1E;
+  border: none;
+  color: white;
+  font-size: 32px;
+}
+.formular textarea {
+  height: 100%;
+  width: 100%;
+  resize: none;
+  border-radius: 15px;
+  background-color: #1E1E1E;
+  border: none;
+  color: white;
+}
+.formular #C {
+  grid-column: 1/3;
+  grid-row: 2/4;
+}
+.formular #D {
+  grid-column: 2/3;
+  grid-row: 4/5;
+  display: grid;
+  justify-content: end;
+}
+.formular button {
+  height: 75px;
+  width: 205px;
+  border-radius: 15px;
+  background-color: #0267FF;
+  color: white;
+  border: none;
 }/*# sourceMappingURL=styly.css.map */
