--- a/styly.scss
+++ b/styly.scss
@@ -40,7 +40,6 @@ header{
     justify-content: space-between;
     flex-direction: row;
     background-color: #1E1E1E;
-    opacity: 0.93;
     position: fixed;
 }
 .main{
@@ -218,4 +217,113 @@ footer{
             padding-top: 15px;
         }
     }
+}
+
+.Onas{
+    height: 450px;
+    width: 1150px;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    color: white;
+    gap: 50px;
+    margin-top: 20vh;
+
+    p{
+        font-size: 30px;
+
+
+    }
+    .nadpis{
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        h1{ 
+            font-size: 70px;
+
+        }
+        #char
+        {
+            color: #0066FE;
+        }
+    }
+    
+    .text-onas{
+        margin-left: 40px;
+        height: 365px;
+        width: 1000px;
+    }
+}
+.main-onas{
+    background-color: rgb(10, 12, 11);
+    display: grid;
+    height: 100vh;
+}
+
+.formular{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 80px);
+    gap: 30px;
+
+    input::placeholder{
+        color: white;
+        opacity: 1;
+        text-align: center;
+        font-size: 32px;
+        
+    }
+    textarea::placeholder{
+        color: white;
+        opacity: 1;
+        font-size: 32px;
+        padding-left: 15px;
+    }
+
+    input{
+        height: 100%;
+        width: 100%;
+        border-radius: 15px;
+        background-color: #1E1E1E;
+        border: none;
+        color: white;
+        font-size: 32px;
+       
+    }
+    textarea{
+        height: 100%;
+        width: 100%;
+        resize: none;
+        border-radius: 15px;
+        background-color: #1E1E1E;
+        border: none;
+        color: white;
+    }
+    
+    #C{
+        grid-column: 1 / 3;
+        grid-row: 2 / 4;
+        
+    }
+
+    #D{
+        grid-column: 2 / 3;
+        grid-row: 4 / 5;
+        display: grid;
+        justify-content: end;
+    }
+
+    button{
+        height: 75px;
+        width: 205px;
+        border-radius: 15px;
+        background-color: #0267FF;
+        color: white;
+        border: none;
+        
+
+    }
+    //přidělat alert po odeslání
+    //změnit design
+
 }
