--- a/styly.css
+++ b/styly.css
@@ -289,4 +289,5 @@ footer .footerlogo .text {
   background-color: #0267FF;
   color: white;
   border: none;
+  font-size: 25px;
 }/*# sourceMappingURL=styly.css.map */
