--- a/styly.scss
+++ b/styly.scss
@@ -320,6 +320,7 @@ footer{
         background-color: #0267FF;
         color: white;
         border: none;
+        font-size: 25px;
 
         
 
@@ -327,4 +328,5 @@ footer{
     //přidělat alert po odeslání
     //změnit design
 //fkhakhflahflahjl
+
 }
