--- a/styly.scss
+++ b/styly.scss
@@ -26,6 +26,9 @@
     {
         color: #0066FE;
     }
+    #char1{
+        color: #0066FE;
+    }
     .text{
         color: white;
         a:link
