--- a/styly.css
+++ b/styly.css
@@ -8,6 +8,14 @@
     margin-top: -20vh;
   }
 }
+@media screen and (max-width: 1000px) {
+  .kontakt1 .nadpis h1 {
+    font-size: 30px;
+  }
+  .kontakt1 .kontakt2 p {
+    font-size: 25px;
+  }
+}
 @font-face {
   font-family: normal;
   src: url(RobotoMono-VariableFont_wght.ttf);
@@ -268,9 +276,8 @@ footer .footerlogo .text {
   color: #0066FE;
 }
 .Onas .text-onas {
-  margin-left: 40px;
   height: 365px;
-  width: 1000px;
+  width: auto;
 }
 
 .main-onas {
@@ -325,7 +332,7 @@ footer .footerlogo .text {
 
 .kontakt1 {
   height: 450px;
-  width: 1150px;
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-self: center;
