--- a/styly.css
+++ b/styly.css
@@ -277,6 +277,7 @@ footer .footerlogo .text {
   background-color: rgb(10, 12, 11);
   display: grid;
   height: 100vh;
+  width: 100vw;
 }
 
 .kontaktdecor img {
