--- a/styly.css
+++ b/styly.css
@@ -276,15 +276,15 @@ footer .footerlogo .text {
   color: #0066FE;
 }
 .Onas .text-onas {
+  margin-left: 40px;
   height: 365px;
-  width: auto;
+  width: 1000px;
 }
 
 .main-onas {
   background-color: rgb(10, 12, 11);
   display: grid;
   height: 100vh;
-  width: 100vw;
 }
 
 .kontaktdecor img {
@@ -333,7 +333,7 @@ footer .footerlogo .text {
 
 .kontakt1 {
   height: 450px;
-  width: auto;
+  width: 1150px;
   display: flex;
   flex-direction: column;
   justify-self: center;
