--- a/styly.css
+++ b/styly.css
@@ -7,7 +7,6 @@
 
 .main-onas {
   background-color: rgb(10, 12, 11);
-  display: grid;
   height: 100vh;
 }
 
@@ -59,81 +58,12 @@ header #first h1 {
 }
 .kontakt1 .nadpis {
   display: flex;
-  flex-direction: row;
-  gap: 20px;
 }
 .kontakt1 .nadpis h1 {
   font-size: 70px;
 }
 .kontakt1 .nadpis #char {
   color: #0066FE;
-}
-.kontakt1 .formular {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 80px);
-  gap: 30px;
-}
-.kontakt1 .formular input::-moz-placeholder {
-  color: white;
-  opacity: 1;
-  text-align: center;
-  font-size: 32px;
-}
-.kontakt1 .formular input::placeholder {
-  color: white;
-  opacity: 1;
-  text-align: center;
-  font-size: 32px;
-}
-.kontakt1 .formular textarea::-moz-placeholder {
-  color: white;
-  opacity: 1;
-  font-size: 32px;
-  padding-left: 15px;
-}
-.kontakt1 .formular textarea::placeholder {
-  color: white;
-  opacity: 1;
-  font-size: 32px;
-  padding-left: 15px;
-}
-.kontakt1 .formular input {
-  height: 100%;
-  width: 100%;
-  border-radius: 15px;
-  background-color: #1E1E1E;
-  border: none;
-  color: white;
-  font-size: 32px;
-}
-.kontakt1 .formular textarea {
-  height: 100%;
-  width: 100%;
-  resize: none;
-  border-radius: 15px;
-  background-color: #1E1E1E;
-  border: none;
-  color: white;
-}
-.kontakt1 .formular #C {
-  grid-column: 1/3;
-  grid-row: 2/4;
-}
-.kontakt1 .formular #D {
-  grid-column: 2/3;
-  grid-row: 4/5;
-  display: grid;
-  justify-content: end;
-}
-.kontakt1 .formular button {
-  height: 75px;
-  width: 205px;
-  border-radius: 15px;
-  background-color: #0267FF;
-  color: white;
-  border: none;
-  font-size: 25px;
 }
 
 .kontakt2 a:link {
@@ -161,10 +91,20 @@ header #first h1 {
   color: white;
 }
 
+.Onas {
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+.Onas .nadpis {
+  display: flex;
+  flex-direction: row;
+}
+
 footer {
   bottom: 0;
   left: 0;
-  height: 25vh;
+  height: 20vh;
   width: 100vw;
   background-color: #1E1E1E;
   color: white;
@@ -201,7 +141,11 @@ footer .footerlogo .text {
     gap: 10vh;
   }
   .main-onas {
+    display: flex;
     max-width: 100vw;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
   }
   header {
     display: grid;
@@ -247,8 +191,11 @@ footer .footerlogo .text {
     justify-content: space-around;
   }
   header #second-mobile img {
-    height: 12vh;
-    width: 12vh;
+    height: 8vh;
+    width: 8vh;
+  }
+  .mobile-absolute {
+    position: static;
   }
   #second {
     display: none;
@@ -292,6 +239,25 @@ footer .footerlogo .text {
   .onasdecor2 {
     display: none;
   }
+  .Onas {
+    height: 45vh;
+    width: 340px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1E1E1E;
+    border-radius: 20px;
+    gap: 5vh;
+  }
+  .Onas .nadpis #char {
+    display: none;
+  }
+  .Onas #blue {
+    color: #0066FE;
+  }
+  .Onas .text-onas {
+    width: 90%;
+  }
   .kontakt1 .nadpis h1 {
     font-size: 30px;
   }
@@ -316,9 +282,10 @@ footer .footerlogo .text {
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
-    width: 90vw;
+    width: 340px;
     height: 30vh;
     background-color: #1E1E1E;
+    border-radius: 20px;
   }
   .section2 .texty #mobile-text #blue {
     color: #0066FE;
@@ -555,9 +522,15 @@ footer .footerlogo .text {
   div {
     font-family: normal;
   }
+  .onasdecor {
+    margin-top: 9vh;
+  }
   .onasdecor img {
     height: 400px;
     float: right;
+  }
+  .onasdecor2 {
+    margin-top: 15vh;
   }
   .onasdecor2 img {
     height: 400px;
@@ -606,14 +579,13 @@ footer .footerlogo .text {
   }
   .Onas {
     height: 450px;
-    width: 1150px;
     display: flex;
     flex-direction: column;
     justify-self: center;
     color: white;
     gap: 50px;
-    margin-top: -15vh;
-    margin-bottom: -30vh;
+    margin-top: 35vh;
+    margin-left: 25vw;
     z-index: 1;
   }
   .Onas p {
