--- a/styly.scss
+++ b/styly.scss
@@ -1,4 +1,3 @@
-
 .main{
     background-color: rgb(10, 12, 11);
     min-height: 100%;
@@ -8,7 +7,6 @@
 
 .main-onas{
     background-color: rgb(10, 12, 11);
-    display: grid;
     height: 100vh;
 }
 
@@ -69,8 +67,6 @@ header{
     }
     .nadpis{
         display: flex;
-        flex-direction: row;
-        gap: 20px;
         h1{ 
             font-size: 70px;
     
@@ -80,73 +76,9 @@ header{
             color: #0066FE;
         }
     }
-    .formular{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 80px);
-    gap: 30px;
-
-    input::placeholder{
-        color: white;
-        opacity: 1;
-        text-align: center;
-        font-size: 32px;
-        
-    }
-    textarea::placeholder{
-        color: white;
-        opacity: 1;
-        font-size: 32px;
-        padding-left: 15px;
-    }
-
-    input{
-        height: 100%;
-        width: 100%;
-        border-radius: 15px;
-        background-color: #1E1E1E;
-        border: none;
-        color: white;
-        font-size: 32px;
     
-    }
-    textarea{
-        height: 100%;
-        width: 100%;
-        resize: none;
-        border-radius: 15px;
-        background-color: #1E1E1E;
-        border: none;
-        color: white;
-    }
-    
-    #C{
-        grid-column: 1 / 3;
-        grid-row: 2 / 4;
-        
-    }
-
-    #D{
-        grid-column: 2 / 3;
-        grid-row: 4 / 5;
-        display: grid;
-        justify-content: end;
-    }
-
-    button{
-        height: 75px;
-        width: 205px;
-        border-radius: 15px;
-        background-color: #0267FF;
-        color: white;
-        border: none;
-        font-size: 25px;
-
-        
-
-    }
 }
-}
+
 .kontakt2{
     a:link
     {
@@ -184,13 +116,29 @@ header{
     
 }
 
+.Onas{
+    display: flex;
+    flex-direction: column;
+    color: white;
+
+    .nadpis{
+        display: flex;
+        flex-direction: row;
+    }
+    
+
+}
+
+
+
 footer{
     bottom: 0;
     left: 0;
-    height: 25vh;
+    height: 20vh;
     width: 100vw;
     background-color: #1E1E1E;
     color: white;
+
     
     .nadpis
     {
@@ -242,7 +190,11 @@ footer{
     }
 
     .main-onas{
+        display: flex;
         max-width: 100vw;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
     }
 
     header{
@@ -251,7 +203,6 @@ footer{
         grid-template-columns: repeat(3, 33%);
         justify-content: space-between;
         background-color: #1E1E1E;
-
         top: 0;
     
         #first{
@@ -297,13 +248,18 @@ footer{
             justify-content: space-around;
 
             img{
-                height: 12vh;
-                width: 12vh;
+                height: 8vh;
+                width: 8vh;
             }
 
 
 
         }
+    }
+
+    .mobile-absolute{
+        position: static;
+        
     }
 
     #second{
@@ -357,6 +313,38 @@ footer{
         display: none;
     }
 
+    .Onas{
+        height: 45vh;
+        width: 340px;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        background-color: #1E1E1E;
+        border-radius: 20px;
+        gap: 5vh;
+
+        .nadpis{
+
+            #char{
+                display: none;
+            }
+        }
+
+        #blue{
+            color: #0066FE;
+        }
+
+        .text-onas{
+
+            width: 90%;
+
+
+        }
+
+
+
+    }
+
     .kontakt1{
         .nadpis
         {
@@ -395,9 +383,10 @@ footer{
                 justify-content: space-around;
                 flex-direction: column;
                 align-items: center;
-                width: 90vw;
+                width: 340px;
                 height: 30vh;
                 background-color: #1E1E1E;
+                border-radius: 20px;
 
                 #blue{
                     color: #0066FE;
@@ -733,6 +722,7 @@ footer{
         font-family: normal;
     }
     .onasdecor{
+        margin-top: 9vh;
         img{
             height: 400px;
             float: right;
@@ -740,6 +730,7 @@ footer{
 
     }
     .onasdecor2{
+        margin-top: 15vh;
         img{
             height: 400px;
         }
@@ -805,14 +796,13 @@ footer{
 
     .Onas{
         height: 450px;
-        width: 1150px;
         display: flex;
         flex-direction: column;
         justify-self: center;
         color: white;
         gap: 50px;
-        margin-top: -15vh;
-        margin-bottom: -30vh;
+        margin-top: 35vh;
+        margin-left: 25vw;
         z-index: 1;
 
         p{
